<resources>
    <string-array name="product_category">
        <item>Fashion</item>
        <item>Apparels</item>
        <item>Sports</item>
        <item>Electronics</item>
        <item>Travel</item>
        <item>Others</item>
    </string-array>
    <string-array name="currency_category">
        <item>IDR</item>
        <item>INR</item>
        <item>USD</item>
    </string-array>
    <string name="server_unregistered">From Server: successfully removed device!</string>
    <string name="server_unregister_error">Could not unregister device on Server (%1$s).</string>
    <string name="server_register_error">Could not register device to Server after %1$d attempts.</string>
    <string name="server_registered">From Server: successfully added device!</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="app_name">Wootag</string>
    <string name="app_font_name">RobotoRegular.ttf</string>
    <string name="app_bold_font_name">RobotoBold.ttf</string>
    <string name="app_italic_font_name">RobotoItalic.ttf</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="mypage">My Page</string>
    <string name="app_id">1402356783355746</string>
    <string name="no_privatefeed_text"> No private feeds available.Add your connections to private group.</string>
    <string name="follower_videos_availbility"> No video feeds available, Click on the camera to create one to share to your followers</string>
    <string name="no_search_text">No search results available, Please try again with different keyword</string>
    <string name="no_connectivity_text">The internet connection appears to be offline</string>
    <string name="no_connectivity_feed_privattext">Video feeds not available at this moment, We are facing trouble with your internet access, Try again</string>
    <string name="sdcard_not_present_toast_message">This operation requires an SD Card. But, you don\'t seem to have one in this device.</string>
    <string name="sdcard_not_mounted_toast_message">Looks like your SD Card is not mounted. Please mount it, and try this operation again.</string>
    <string name="db_name">WOOTAG.sqlite</string>
    <string name="db_version">5</string>
    <string name="title_activity_main">WooTag</string>
    <string name="title_activity_video_take_down">VideoTakeDownActivity</string>
    <string name="title_activity_my_page">VideoFeed</string>
    <string name="username">Enter name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="emailnewpassword">Email password</string>
    <string name="cancel">Cancel</string>
    <string name="forgotPassword">Forgot Password : </string>
    <string name="email">EMAIL</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="title_activity_see_all_comments">SeeAllCommentsActivity</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_quick_linnk">QuickLinnkActivity</string>
    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="title_activity_browse">BrowseActivity</string>
    <string name="title_activity_video_details">VideoDetailsActivity</string>
    <string name="title_activity_others">OthersActivity</string>
    <string name="title_activity_share">ShareActivity</string>
    <string name="title_activity_friends_list">FriendsListActivity</string>
    <string name="title_activity_my_video">MyVideoActivity</string>
    <string name="title_activity_notifications">NotificationsActivity</string>
    <string name="title_activity_friend_finder">FriendFinderActivity</string>
    <string name="title_activity_account_setting">AccountSettingActivity</string>
    <string name="title_activity_tag_and_later">TagAndLaterActivity</string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>
    <string name="option_switch_camera">Switching Camera</string>
    <string name="title_activity_introzone">IntrozoneActivity</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_push_notification_settings">PushNotificationSettingsActivity</string>
    <string name="title_activity_share_setting">ShareSettingActivity</string>
    <string name="title_activity_profile_pick_view">ProfilePickViewActivity</string>
    <string name="title_activity_pending_private_request">PendingPrivateRequestActivity</string>
    <string name="title_activity_wootag_tab">WootagTabActivity</string>
    <string name="title_activity_product_details">ProductDetailsActivity</string>
    <string name="title_activity_checkout">BuyActivity</string>
    <string name="title_activity_sell">SellActivity</string>
    <string name="title_activity_describe">DescribeActivity</string>
    <string name="title_activity_request">RequestActivity</string>
    <string name="user_name">user name</string>
    <string name="my_account">My account</string>
    <string name="likes">LIKES</string>
    <string name="wrap">|</string>
    <string name="update_website">update website</string>
    <string name="website">website</string>
    <string name="update_bio">update bio</string>
    <string name="bio">"bio "</string>
    <string name="edit">Edit</string>
    <string name="update_designation">update designation</string>
    <string name="designation">"designation "</string>
    <string name="update_country">update country</string>
    <string name="country">"country "</string>
    <string name="update_mobile_number">update mobile number</string>
    <string name="tap_on_the_tag_icon_">"Tap on the tag icon "</string>
    <string name="only_followers">Only Followers</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="google">Google</string>
    <string name="video_viewed_by">Video viewed by</string>
    <string name="everywhere">everywhere</string>
    <string name="followers_video_feeds">followers video feeds</string>
    <string name="_8889996664">8889996664</string>
    <string name="not_specified">Not Specified</string>
    <string name="change_password">Change Password</string>
    <string name="sharing">Sharing</string>
    <string name="set_cover_background">Set Cover Background</string>
    <string name="only_private_group">Only Private Group</string>
    <string name="private_feeds">Private feeds</string>
    <string name="enter_old_password">enter old password</string>
    <string name="enter_new_password">enter new password</string>
    <string name="mentions">MENTIONS</string>
    <string name="confirm_new_password">confirm new password</string>
    <string name="interact_with_people_place_and_product_inside_the_videos">Interact with people, place and product inside the videos</string>
    <string name="owner_name">Owner Name</string>
    <string name="_00_00_00_00">00.00/00.00</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="find_friend">Find Friend</string>
    <string name="request_product">Purchase Requests</string>
    <string name="comments">COMMENTS</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="feedback">Feedback</string>
    <string name="pending_videos">Pending videos</string>
    <string name="log_out">Log out</string>
    <string name="report_video">Report video</string>
    <string name="why_are_you_reporting_this_video">Why are you reporting this video?</string>
    <string name="i_dont_like_this_video">I don&amp;apos;t like this video</string>
    <string name="this_video_is_spam_or_a_scam">This video is spam or a scam</string>
    <string name="this_video_puts_people_at_risk">This video puts people at risk</string>
    <string name="this_video_shouldnt_be_on_wootag">This video shouldn&amp;apos;t be on Wootag</string>
    <string name="thanks">Thanks</string>
    <string name="reported_successfully">Reported Successfully</string>
    <string name="your_feedbacks_are_extremely_valuable_for_us">Your feedbacks are extremely valuable for us</string>
    <string name="please_share_your_feedbacks_about_product_issues_and_new_features_">Please share your feedbacks about product,issues and new features.</string>
    <string name="write_a_comment">write a comment</string>
    <string name="account">Account</string>
    <string name="unlink">Unlink</string>
    <string name="wootag">Wootag</string>
    <string name="marion_brando">Marion Brando</string>
    <string name="created_">"Created: "</string>
    <string name="views">"| Views: "</string>
    <string name="_250">250</string>
    <string name="video_title_here">Video Title Here</string>
    <string name="name">NAME</string>
    <string name="lorem_ipsum_dolo">Lorem ipsum dolo</string>
    <string name="m_y_o_t_h_e_r_s_t_u_f_f">M Y  O T H E R  S T U F F</string>
    <string name="_00">00</string>
    <string name="share">Share</string>
    <string name="checkout">Checkout</string>
    <string name="enter_video_title_here">Enter video title here</string>
    <string name="twitter_">"Twitter    "</string>
    <string name="google_">"Google+  "</string>
    <string name="thanks_for_your_interest">Hi,Thanks for your interest in this product, Please send in your details and will contact shortly to deliver</string>
    <string name="address">ADDRESS</string>
    <string name="mobile">MOBILE NUMBER</string>
    <string name="message">MESSAGE</string>
    <string name="choose_a_file">Choose a file</string>
    <string name="comments_on_your_video">Mamatha Comments On Your Video</string>
    <string name="_1_hour_ago">1 hour ago</string>
    <string name="header">Header</string>
    <string name="discover_more_people">Discover More People</string>
    <string name="sanjay">sanjay</string>
    <string name="online">online</string>
    <string name="about">About</string>
    <string name="status_update">Status update</string>
    <string name="last_update_time">Last update time</string>
    <string name="location">Location</string>
    <string name="search">search</string>
    <string name="tagged_user">Tagged user</string>
    <string name="last_seen_9_feb_2014">last seen : 9 feb 2014</string>
    <string name="recent_updates">Recent Updates</string>
    <string name="watching_300_about_an_hour_ago">Watching 300 about an hour ago</string>
    <string name="available_user">Available user</string>
    <string name="textview">TextView</string>
    <string name="working_at">Working at</string>
    <string name="lives_in">Lives in</string>
    <string name="from">From</string>
    <string name="followed_you">Mamatha Followed You</string>
    <string name="sign_in_using">Sign in using</string>
    <string name="friend_list">Friend List</string>
    <string name="search_friends">Search Friends</string>
    <string name="find_your_facebook_friends">Find Your Facebook Friends</string>
    <string name="find_your_twitter_friends">Find Your Twitter Friends</string>
    <string name="find_your_google_friends">Find Your Google+ Friends</string>
    <string name="camera">camera</string>
    <string name="_start_camera_preview_">- Start Camera Preview -</string>
    <string name="_stop_camera_preview_">- Stop Camera Preview -</string>
    <string name="product_details">Product Details</string>
    <string name="type_the_name_of_your_product">Type the name of your product</string>
    <string name="category">CATEGORY</string>
    <string name="currency_type">CURRENCY TYPE</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="_5_sec">5 sec</string>
    <string name="_10_sec">10 sec</string>
    <string name="_15_sec">15 sec</string>
    <string name="_20_sec">20 sec</string>
</resources>