<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="right"
    android:background="@color/tag_layout_bg_color"
    android:orientation="horizontal"
    android:padding="@dimen/smallmargin" >

    <Button
        android:id="@+id/firstValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/smallmargin"
        android:layout_marginRight="@dimen/smallmargin"
        android:background="@drawable/edit_text_border"
        android:padding="@dimen/smallmargin"
        android:text="@string/_5_sec" />

    <Button
        android:id="@+id/secondValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/smallmargin"
        android:background="@drawable/edit_text_border"
        android:padding="@dimen/smallmargin"
        android:text="@string/_10_sec" />

    <Button
        android:id="@+id/thirdValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/smallmargin"
        android:background="@drawable/edit_text_border"
        android:padding="@dimen/smallmargin"
        android:text="@string/_15_sec" />

    <Button
        android:id="@+id/fourthValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/smallmargin"
        android:background="@drawable/edit_text_border"
        android:padding="@dimen/smallmargin"
        android:text="@string/_20_sec" />

</LinearLayout>