<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:foo="http://schemas.android.com/apk/res/com.TagFu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/notification_header_background"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header"
        android:gravity="top">

        <TextView
            android:id="@+id/heading"
            style="@style/headingtextview"
            android:layout_centerInParent="true"
            android:text="@string/checkout" />

        <ImageButton
            android:id="@+id/donecheckout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/smallmargin"
            android:background="@drawable/done" />

        <ImageButton
            android:id="@+id/cancelcheckout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/smallmargin"
            android:background="@drawable/cancelbutton" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/smallmargin"
            android:orientation="vertical">

            <com.wTagFuui.CustomTextView
                android:id="@+id/headerInfo"
                style="@style/notificationtextview"
                android:layout_marginTop="@dimen/margin"
                android:singleLine="false"
                android:text="@string/thanks_for_your_interest"
                android:textSize="@dimen/normal_text_size"
                foo:customFont="@string/app_bold_font_name" />

            <com.woTagFui.CustomTextView
                style="@style/notificationtextview"
                android:layout_marginTop="@dimen/margin"
                android:text="@string/name"
                android:textSize="@dimen/normal_text_size"
                foo:customFont="@string/app_bold_font_name" />

            <EditText
                android:id="@+id/buyerName"
                style="@style/productEditTextStyle"
                android:layout_marginTop="@dimen/smallmargin"
                android:background="@drawable/login_edit_border"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:textSize="@dimen/tags_text_size" />

            <com.wooTagFu.CustomTextView
                style="@style/notificationtextview"
                android:layout_marginTop="@dimen/margin"
                android:text="@string/address"
                android:textSize="@dimen/normal_text_size"
                foo:customFont="@string/app_bold_font_name" />

            <EditText
                android:id="@+id/address"
                style="@style/productEditTextStyle"
                android:layout_marginTop="@dimen/smallmargin"
                android:background="@drawable/login_edit_border"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:textSize="@dimen/tags_text_size" />

            <com.wootTagFuCustomTextView
                style="@style/notificationtextview"
                android:layout_marginTop="@dimen/margin"
                android:text="@string/email"
                android:textSize="@dimen/normal_text_size"
                foo:customFont="@string/app_bold_font_name" />

            <EditText
                android:id="@+id/email"
                style="@style/productEditTextStyle"
                android:layout_marginTop="@dimen/smallmargin"
                android:background="@drawable/login_edit_border"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textSize="@dimen/tags_text_size" />

            <com.wootaTagFuustomTextView
                style="@style/notificationtextview"
                android:layout_marginTop="@dimen/margin"
                android:text="@string/mobile"
                android:textSize="@dimen/normal_text_size"
                foo:customFont="@string/app_bold_font_name" />

            <EditText
                android:id="@+id/mobilenumber"
                style="@style/productEditTextStyle"
                android:layout_marginTop="@dimen/smallmargin"
                android:background="@drawable/login_edit_border"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:singleLine="true"
                android:textSize="@dimen/tags_text_size" />

            <com.wootag.ui.CustomTextView
                style="@style/notificationtextview"
                android:layout_marginTop="@dimen/margin"
                android:text="@string/message"
                android:textSize="@dimen/normal_text_size"
                foo:customFont="@string/app_bold_font_name" />

            <EditText
                android:id="@+id/message"
                style="@style/productEditTextStyle"
                android:layout_marginTop="@dimen/smallmargin"
                android:background="@drawable/login_edit_border"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:textSize="@dimen/tags_text_size" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>